Improved export alignment, fixed scroll blockage.

--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,7 @@ body {
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    min-height: 0;
 }
 
 .page-info {
@@ -242,13 +243,15 @@ body {
     padding: 2rem 3rem;
     font-family: 'Courier New', 'Courier', monospace;
     font-size: 12pt;
-    line-height: 1.5;
+    line-height: 1.2;
     background: white;
     overflow-y: auto;
     outline: none;
     max-width: 8.5in;
     margin: 0 auto;
     width: 100%;
+    min-height: 500px;
+    max-height: calc(100vh - 250px);
 }
 
 .script-editor:focus {
@@ -259,7 +262,7 @@ body {
 .script-line {
     margin: 0;
     padding: 0;
-    min-height: 1.5em;
+    min-height: 1.2em;
     white-space: pre-wrap;
     position: relative;
 }
@@ -269,7 +272,7 @@ body {
 .script-line.fade-out {
     text-align: left;
     font-weight: bold;
-    margin: 2em 0 1em 0;
+    margin: 1.5em 0 0.8em 0;
     text-transform: uppercase;
 }
 
@@ -277,21 +280,21 @@ body {
 .script-line.scene-heading {
     font-weight: bold;
     text-transform: uppercase;
-    margin: 2em 0 1em 0;
+    margin: 1.5em 0 0.8em 0;
     text-align: left;
 }
 
 /* Action/Description */
 .script-line.action {
     text-align: left;
-    margin: 1em 0;
+    margin: 0.8em 0;
     max-width: 6in;
 }
 
 /* Character Names */
 .script-line.character {
     text-align: center;
-    margin: 2em 0 0 3.5in;
+    margin: 1.5em 0 0 3.5in;
     font-weight: bold;
     text-transform: uppercase;
     max-width: 2in;
@@ -300,7 +303,7 @@ body {
 /* Dialogue */
 .script-line.dialogue {
     text-align: center;
-    margin: 0 0 1em 2.5in;
+    margin: 0 0 0.8em 2.5in;
     max-width: 3.5in;
 }
 
@@ -317,7 +320,7 @@ body {
     text-align: right;
     font-weight: bold;
     text-transform: uppercase;
-    margin: 2em 0 1em 0;
+    margin: 1.5em 0 0.8em 0;
 }
 
 /* Status Bar */
